--- a/A1/a1.ipynb
+++ b/A1/a1.ipynb
@@ -71,6 +71,8 @@
    },
    "outputs": [],
    "source": [
+    "# stef has git\n",
+    "\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split"
    ]
